Bug 1740518 - Remove allow-gtk-dark-theme special-case in color-scheme computation. r=mstange a=pascalc

See the comments as for why. If as a user you want to get this behavior
you could put something like:

  :root { color-scheme: light dark }

in a user stylesheet, but that could cause the same contrast issues the
allow-gtk-dark-theme pref has now.

Differential Revision: https://phabricator.services.mozilla.com/D132361